docs/api/qiskit/0.29/qiskit.opflow.list_ops.ComposedOp.mdx
---
title: ComposedOp (v0.29)
description: API reference for qiskit.opflow.list_ops.ComposedOp in qiskit v0.29
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.opflow.list_ops.ComposedOp
---

# ComposedOp

<Class id="qiskit.opflow.list_ops.ComposedOp" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.18/qiskit/opflow/list_ops/composed_op.py" signature="ComposedOp(oplist, coeff=1.0, abelian=False)" modifiers="class">
  Bases: `qiskit.opflow.list_ops.list_op.ListOp`

  A class for lazily representing compositions of Operators. Often Operators cannot be efficiently composed with one another, but may be manipulated further so that they can be composed later. This class holds logic to indicate that the Operators in `oplist` are meant to be composed, and therefore if they reach a point in which they can be, such as after conversion to QuantumCircuits or matrices, they can be reduced by composition.

  **Parameters**

  *   **oplist** (`List`\[`OperatorBase`]) – The Operators being composed.
  *   **coeff** (`Union`\[`complex`, `ParameterExpression`]) – A coefficient multiplying the operator
  *   **abelian** (`bool`) – Indicates whether the Operators in `oplist` are known to mutually commute.

  ## Methods Defined Here

  <span id="qiskit-opflow-list-ops-composedop-adjoint" />

  ### adjoint

  <Function id="qiskit.opflow.list_ops.ComposedOp.adjoint" signature="ComposedOp.adjoint()">
    Return a new Operator equal to the Operator’s adjoint (conjugate transpose), overloaded by `~`. For StateFns, this also turns the StateFn into a measurement.

    **Return type**

    `ComposedOp`

    **Returns**

    An `OperatorBase` equivalent to the adjoint of self.
  </Function>

  <span id="qiskit-opflow-list-ops-composedop-compose" />

  ### compose

  <Function id="qiskit.opflow.list_ops.ComposedOp.compose" signature="ComposedOp.compose(other, permutation=None, front=False)">
    Return Operator Composition between self and other (linear algebra-style: A\@B(x) = A(B(x))), overloaded by `@`.

    Note: You must be conscious of Quantum Circuit vs. Linear Algebra ordering conventions. Meaning, X.compose(Y) produces an X∘Y on qubit 0, but would produce a QuantumCircuit which looks like

    > -\[Y]-\[X]-

    Because Terra prints circuits with the initial state at the left side of the circuit.

    **Parameters**

    *   **other** (`OperatorBase`) – The `OperatorBase` with which to compose self.
    *   **permutation** (`Optional`\[`List`\[`int`]]) – `List[int]` which defines permutation on other operator.
    *   **front** (`bool`) – If front==True, return `other.compose(self)`.

    **Return type**

    `OperatorBase`

    **Returns**

    An `OperatorBase` equivalent to the function composition of self and other.
  </Function>

  <span id="qiskit-opflow-list-ops-composedop-eval" />

  ### eval

  <Function id="qiskit.opflow.list_ops.ComposedOp.eval" signature="ComposedOp.eval(front=None)">
    Evaluate the Operator’s underlying function, either on a binary string or another Operator. A square binary Operator can be defined as a function taking a binary function to another binary function. This method returns the value of that function for a given StateFn or binary string. For example, `op.eval('0110').eval('1110')` can be seen as querying the Operator’s matrix representation by row 6 and column 14, and will return the complex value at those “indices.” Similarly for a StateFn, `op.eval('1011')` will return the complex value at row 11 of the vector representation of the StateFn, as all StateFns are defined to be evaluated from Zero implicitly (i.e. it is as if `.eval('0000')` is already called implicitly to always “indexing” from column 0).

    ListOp’s eval recursively evaluates each Operator in `oplist`, and combines the results using the recombination function `combo_fn`.

    **Parameters**

    **front** (`Union`\[`str`, `dict`, `ndarray`, `OperatorBase`, `Statevector`, `None`]) – The bitstring, dict of bitstrings (with values being coefficients), or StateFn to evaluated by the Operator’s underlying function.

    **Return type**

    `Union`\[`OperatorBase`, `complex`]

    **Returns**

    The output of the `oplist` Operators’ evaluation function, combined with the `combo_fn`. If either self or front contain proper `ListOps` (not ListOp subclasses), the result is an n-dimensional list of complex or StateFn results, resulting from the recursive evaluation by each OperatorBase in the ListOps.

    **Raises**

    *   **NotImplementedError** – Raised if called for a subclass which is not distributive.
    *   **TypeError** – Operators with mixed hierarchies, such as a ListOp containing both PrimitiveOps and ListOps, are not supported.
    *   **NotImplementedError** – Attempting to call ListOp’s eval from a non-distributive subclass.
  </Function>

  <span id="qiskit-opflow-list-ops-composedop-non-distributive-reduce" />

  ### non\_distributive\_reduce

  <Function id="qiskit.opflow.list_ops.ComposedOp.non_distributive_reduce" signature="ComposedOp.non_distributive_reduce()">
    Reduce without attempting to expand all distributive compositions.

    **Return type**

    `OperatorBase`

    **Returns**

    The reduced Operator.
  </Function>

  <span id="qiskit-opflow-list-ops-composedop-reduce" />

  ### reduce

  <Function id="qiskit.opflow.list_ops.ComposedOp.reduce" signature="ComposedOp.reduce()">
    Try collapsing the Operator structure, usually after some type of conversion, e.g. trying to add Operators in a SummedOp or delete needless IGates in a CircuitOp. If no reduction is available, just returns self.

    **Return type**

    `OperatorBase`

    **Returns**

    The reduced `OperatorBase`.
  </Function>

  <span id="qiskit-opflow-list-ops-composedop-to-circuit" />

  ### to\_circuit

  <Function id="qiskit.opflow.list_ops.ComposedOp.to_circuit" signature="ComposedOp.to_circuit()">
    Returns the quantum circuit, representing the composed operator.

    **Return type**

    `QuantumCircuit`

    **Returns**

    The circuit representation of the composed operator.

    **Raises**

    [**OpflowError**](qiskit.opflow.OpflowError "qiskit.opflow.OpflowError") – for operators where a single underlying circuit can not be obtained.
  </Function>

  ## Attributes

  ### INDENTATION

  <Attribute id="qiskit.opflow.list_ops.ComposedOp.INDENTATION" attributeValue="'  '" />

  ### abelian

  <Attribute id="qiskit.opflow.list_ops.ComposedOp.abelian">
    Whether the Operators in `oplist` are known to commute with one another.

    **Return type**

    `bool`

    **Returns**

    A bool indicating whether the `oplist` is Abelian.
  </Attribute>

  ### coeff

  <Attribute id="qiskit.opflow.list_ops.ComposedOp.coeff">
    The scalar coefficient multiplying the Operator.

    **Return type**

    `Union`\[`complex`, `ParameterExpression`]

    **Returns**

    The coefficient.
  </Attribute>

  ### combo\_fn

  <Attribute id="qiskit.opflow.list_ops.ComposedOp.combo_fn">
    The function defining how to combine `oplist` (or Numbers, or NumPy arrays) to produce the Operator’s underlying function. For example, SummedOp’s combination function is to add all of the Operators in `oplist`.

    **Return type**

    `Callable`

    **Returns**

    The combination function.
  </Attribute>

  ### distributive

  <Attribute id="qiskit.opflow.list_ops.ComposedOp.distributive">
    **Return type**

    `bool`
  </Attribute>

  ### grad\_combo\_fn

  <Attribute id="qiskit.opflow.list_ops.ComposedOp.grad_combo_fn">
    The gradient of `combo_fn`.

    **Return type**

    `Optional`\[`Callable`]
  </Attribute>

  ### instance\_id

  <Attribute id="qiskit.opflow.list_ops.ComposedOp.instance_id">
    Return the unique instance id.

    **Return type**

    `int`
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.opflow.list_ops.ComposedOp.num_qubits">
    **Return type**

    `int`
  </Attribute>

  ### oplist

  <Attribute id="qiskit.opflow.list_ops.ComposedOp.oplist">
    The list of `OperatorBases` defining the underlying function of this Operator.

    **Return type**

    `List`\[`OperatorBase`]

    **Returns**

    The Operators defining the ListOp
  </Attribute>

  ### parameters

  <Attribute id="qiskit.opflow.list_ops.ComposedOp.parameters" />

  ### settings

  <Attribute id="qiskit.opflow.list_ops.ComposedOp.settings">
    Return settings.

    **Return type**

    `Dict`
  </Attribute>
</Class>

